# VoiceForge-CLI

./: .gitignore  CONTRIBUTING.md  Makefile  README.en.md  README.ja.md  README.md  README.zh-TW.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_audio.py  test_engine.py
voiceforge/: __init__.py  audio.py  batch.py  cli.py  engine.py  project.py
voiceforge/web/: __init__.py  app.py
